blocks/hero/hero.css
/* block specific CSS goes here */

main .hero-container > div {
  max-width: unset;
  width: 100%;
}
  
main .hero-container {
  padding: 0;
}
  
main .hero {
  display: flex;
  justify-content: center;
  flex-direction: column;
  position: relative;
  padding: 32px;
  min-height: 900px;
}

main .hero h1 {
  max-width: 1680px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 0;
  color: white;
  font-family: "MBCorpo Title", serif;
  font-weight: 400;
  font-size: 64px;
  padding-right: 51%;
}

main .hero h5 {
  font-family: "MBCorpo Text", serif;
  font-size: 18px;
  color: #bbb;
  margin: 32px auto 0;
  max-width: 1680px;
  font-weight: normal;
}

main .hero picture {
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  object-fit: cover;
  box-sizing: border-box;
}

.picture-gradient {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  height: 100%;
  width: 100%;
  background: linear-gradient(to top,var(--wb-black),transparent 50%),linear-gradient(to right,var(--wb-black),transparent 50%);
}

main .hero img {
  object-fit: cover;
  width: 100% !important;
  height: 100%;
}

main .hero-wrapper {
  width: auto;
}

